--- a/examples/basic.html
+++ b/examples/basic.html
@@ -21,6 +21,8 @@
             position: relative;
         }
     </style>
+    <link href="https://cesium.com/downloads/cesiumjs/releases/1.111/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
+    <script src="https://cesium.com/downloads/cesiumjs/releases/1.111/Build/Cesium/Cesium.js"></script>
 </head>
 
 <body>
@@ -64,6 +66,25 @@
         // 清理函数
         window.addEventListener('beforeunload', () => {
             fusion.dispose();
+        });
+
+        // Your access token can be found at: https://ion.cesium.com/tokens.
+        Cesium.Ion.defaultAccessToken = 'your_access_token';
+
+        // Initialize the Cesium Viewer
+        const viewer = new Cesium.Viewer('container', {
+            terrain: Cesium.Terrain.fromWorldTerrain({
+                requestVertexNormals: true
+            })
+        });
+
+        // Enable lighting
+        viewer.scene.globe.enableLighting = true;
+        viewer.scene.atmosphere.dynamicLighting = Cesium.DynamicAtmosphereLightingType.SUNLIGHT;
+
+        // Set the camera to a default position
+        viewer.camera.setView({
+            destination: Cesium.Cartesian3.fromDegrees(-122.4175, 37.655, 400000.0)
         });
     </script>
 </body>
